allowing manual workflow action

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
     #tags: [ 'v*.*.*' ]
     paths: [src/**]
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
