Added proper docker-publish, updated omni-install, modernized Dockerfile and fix syntax on main.py
Signed-off-by: Leonardo Amaral <contato@leonardoamaral.com.br>

--- a/deployment/K8s-omni-install.yaml
+++ b/deployment/K8s-omni-install.yaml
@@ -39,7 +39,7 @@ spec:
           path: /proc
       containers:
       - name: omni
-        image: mattogodoy/omni:arm
+        image: ghcr.io/leleobhz/omni:latest
         imagePullPolicy: Always
         envFrom:
         - configMapRef:
