Added build-essential to Dockerfile
Signed-off-by: Leonardo Amaral <contato@leonardoamaral.com.br>

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3-slim as build
 COPY ./requirements.txt requirements.txt
 
 RUN apt -y update && \
-    apt -y install --no-install-recommends gcc && \
+    apt -y install build-essential python3-dev && \
     pip3 install -r requirements.txt
 
 FROM python:3-slim
