Fixes to clang versioning and lightweight build removing build-essentials from build process and instead using gcc/g++ packages.
Signed-off-by: Leonardo Amaral <contato@leonardoamaral.com.br>

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -11,7 +11,7 @@ RUN export clang_upstream_version=18 && \
     curl -fsSL https://apt.llvm.org/llvm-snapshot.gpg.key | gpg --dearmor -o /etc/apt/keyrings/llvm-snapshot.gpg && \
     echo "deb [arch=\"${arch}\" signed-by=/etc/apt/keyrings/llvm-snapshot.gpg] http://apt.llvm.org/${distro} llvm-toolchain-${distro}-${clang_upstream_version} main\ndeb-src [arch=\"${arch}\" signed-by=/etc/apt/keyrings/llvm-snapshot.gpg] http://apt.llvm.org/${distro} llvm-toolchain-${distro}-${clang_upstream_version} main" >> /etc/apt/sources.list.d/llvm.list && \
     apt -y update && \
-    bash -c 'if [[ "${arch}" == @(amd64|arm64|i386|s360x) ]] ; then echo "Arch clang: ${arch}" ; apt -y install build-essential patchelf clang-${clang_upstream_version} lldb-${clang_upstream_version} lld-${clang_upstream_version} ; else echo "Arch clang: ${arch}" ; apt -y install build-essential patchelf clang-${clang_debian_version} lldb-${clang_debian_version} lld-${clang_debian_version} ; fi' && \
+    bash -c 'if [[ "${arch}" == @(amd64|arm64|i386|s360x) ]] ; then echo "Arch clang: ${arch}" ; apt -y install --no-install-recommends gcc g++ patchelf clang-${clang_upstream_version} lldb-${clang_upstream_version} lld-${clang_upstream_version} ; else echo "Arch clang: ${arch}" ; apt -y install --no-install-recommends gcc g++ patchelf clang-${clang_debian_version} lldb-${clang_debian_version} lld-${clang_debian_version} ; fi' && \
     apt -y download zlib1g && \ 
     mkdir -p /librequirements && \
     dpkg -i --force-all --root=/librequirements zlib1g*.deb && \
@@ -22,7 +22,7 @@ WORKDIR /app
 COPY ./main.py ./stats.py /app
 
 RUN export arch=$(dpkg --print-architecture) && \
-    bash -c 'if [[ "${arch}" == @(amd64|arm64|i386|s360x) ]] ; then ln -sv /usr/bin/clang++-${clang_upstream_version} /usr/bin/clang++ ; ln -sv /usr/bin/clang-${clang_upstream_version} /usr/bin/clang ; ln -sv /usr/bin/clang-cpp-${clang_upstream_version} /usr/bin/clang-cpp ; fi' && \
+    bash -c 'if [[ "${arch}" == @(amd64|arm64|i386|s360x) ]] ; then ln -sv /usr/bin/clang++-${clang_upstream_version} /usr/bin/clang++ ; ln -sv /usr/bin/clang-${clang_upstream_version} /usr/bin/clang ; ln -sv /usr/bin/clang-cpp-${clang_upstream_version} /usr/bin/clang-cpp ; else ln -sv /usr/bin/clang++-${clang_debian_version} /usr/bin/clang++ ; ln -sv /usr/bin/clang-${clang_debian_version} /usr/bin/clang ; ln -sv /usr/bin/clang-cpp-${clang_debian_version} /usr/bin/clang-cpp ;  fi' && \
     python3 -m nuitka --follow-imports --clang --include-plugin-directory=/app --standalone --onefile --output-filename=omni main.py
 
 FROM gcr.io/distroless/base-debian12:latest
