Replaced values for nuitka
Signed-off-by: Leonardo Amaral <contato@leonardoamaral.com.br>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: [ "python" ]
+    branches: [ "nuitka" ]
     paths:
       - 'src/**'
       - '.github/workflows/**'
@@ -51,7 +51,7 @@ jobs:
         with:
           images: ${{ env.IMAGE_NAME }}
           flavor: |
-            latest=false
+            latest=true
           tags: |
             type=schedule
             type=ref,event=branch
